--- a/index.html
+++ b/index.html
@@ -127,6 +127,90 @@
                 <div class="col-md-9">
                     <h2>最近更新文章</h2>
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-15">
+                            <div class="col-md-3">
+                                <a href="/news/article-178393.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240908-3/0cdbb171f8d1d7104a29a47c2be5e046.webp" style="width:100%;" alt="懒人福音：用Quantumult实现京东全自动签到的终极指南">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-178393.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        懒人福音：用Quantumult实现京东全自动签到的终极指南                                    </h3>
+                                </a>
+                                <p>一、当科技遇上薅羊毛：自动化签到的时代意义  在数字化生存的今天，每个互联网原住民手机里都躺着十几个需要"每日打卡"的APP。京东作为国内电商巨头，其签到体系堪称福利界的"瑞士军刀"——从京豆、优惠券</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-14">
+                            <div class="col-md-3">
+                                <a href="/news/article-177989.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240908-3/91fe0c32cb57005cfadc0dfb716fb1c5.webp" style="width:100%;" alt="全面指南：电脑科学上网的工具选择与安全策略">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-177989.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        全面指南：电脑科学上网的工具选择与安全策略                                    </h3>
+                                </a>
+                                <p>在数字化程度不断加深的今天，互联网已经从一种辅助工具演变为人们工作、学习、社交甚至是生活中不可或缺的一部分。然而，随着网络技术的迅速发展，我们面对的网络环境也变得更加复杂和多变。尤其是在部分地区网络访</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-13">
+                            <div class="col-md-3">
+                                <a href="/news/article-177603.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240908-3/06b328b6c8a7d0f5ccd6f3235d844978.webp" style="width:100%;" alt="iOS 11科学上网全攻略：2018年突破网络限制的终极指南">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-177603.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        iOS 11科学上网全攻略：2018年突破网络限制的终极指南                                    </h3>
+                                </a>
+                                <p>引言：数字时代的自由之翼  在2018年的数字版图中，互联网已成为现代人获取知识、交流思想的重要渠道。然而，不同地区的网络政策差异造就了无形的"数字鸿沟"，科学上网技术便成为跨越这道鸿沟的关键桥梁。对</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-12">
+                            <div class="col-md-3">
+                                <a href="/news/article-177221.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240908-3/409889d86ff78f44fa13a03963ed57cd.webp" style="width:100%;" alt="iOS端科学上网王牌：Shadowrocket与泥鳅哥的实战全指南">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-177221.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        iOS端科学上网王牌：Shadowrocket与泥鳅哥的实战全指南                                    </h3>
+                                </a>
+                                <p>在日渐严峻的网络环境下，寻找一款既安全又高效的代理工具成为不少用户的“刚需”。尤其对于iPhone用户而言，一款功能强大、界面简洁、支持多协议的科学上网工具，堪称“翻墙神器”。而Shadowrocke</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-11">
+                            <div class="col-md-3">
+                                <a href="/news/article-176825.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240908-3/409889d86ff78f44fa13a03963ed57cd.webp" style="width:100%;" alt="突破数字边界：科学上网如何重塑我们的信息世界">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-176825.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        突破数字边界：科学上网如何重塑我们的信息世界                                    </h3>
+                                </a>
+                                <p>在当今这个信息爆炸的时代，互联网本应成为连接全球的无障碍桥梁。然而，现实中的网络环境却常常被各种无形的墙所阻隔，使得信息的自由流动受到限制。科学上网，作为一种突破网络限制的技术手段，不仅为我们打开了通</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-10">
+                            <div class="col-md-3">
+                                <a href="/news/article-176433.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240908-3/027917d12c579a5dea9bd86d027f875f.webp" style="width:100%;" alt="突破网络边界：利用Hosts文件实现科学上网的完整指南">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-176433.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        突破网络边界：利用Hosts文件实现科学上网的完整指南                                    </h3>
+                                </a>
+                                <p>在当今全球化的数字时代，互联网本应是无国界的知识海洋，然而现实中的网络限制却时常为我们的探索之旅设下重重关卡。面对某些地区对特定网站和服务的封锁，许多用户开始寻找更为便捷高效的访问解决方案。在众多科学</p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-11-09">
                             <div class="col-md-3">
                                 <a href="/news/article-176042.htm" class="xcblog-blog-url">
@@ -323,90 +407,6 @@
                                 <p>在当今互联网环境中，网络限制和隐私泄露问题日益突出，许多用户希望能够安全、自由地访问全球互联网资源。而绿色浏览器结合科学上网工具，成为了一种高效、便捷的解决方案。本文将深入探讨绿色浏览器的优势、科学上</p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-10-23">
-                            <div class="col-md-3">
-                                <a href="/news/article-170590.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240908-3/027917d12c579a5dea9bd86d027f875f.webp" style="width:100%;" alt="Shadowrocket账号购买后为何消失？全面解析常见问题与解决方案">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-170590.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        Shadowrocket账号购买后为何消失？全面解析常见问题与解决方案                                    </h3>
-                                </a>
-                                <p>引言：隐私保护时代的工具选择  在当今高度互联的数字世界中，网络隐私和安全问题日益凸显。越来越多的用户开始寻求工具来保护自己的在线活动免受窥探，其中Shadowrocket作为iOS平台上的一款高效代</p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-10-22">
-                            <div class="col-md-3">
-                                <a href="/news/article-170197.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240908-3/6bf05f250f955b5c11937f0020fca2ab.webp" style="width:100%;" alt="深度揭秘心阶云V2Ray：科学上网的利器全方位使用指南">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-170197.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        深度揭秘心阶云V2Ray：科学上网的利器全方位使用指南                                    </h3>
-                                </a>
-                                <p>在当今互联网高速发展的时代，用户对网络隐私保护和自由访问全球信息的需求日益增长。面对层层网络封锁和复杂的网络环境，传统代理工具已难以满足人们对稳定、安全和高速上网体验的追求。作为新一代网络代理技术的代</p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-10-21">
-                            <div class="col-md-3">
-                                <a href="/news/article-169808.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240908-3/4dc31b95b313166988b35cb9d1cdc418.webp" style="width:100%;" alt="Clash代理服务费用全解析：从免费到付费，如何精准选择最适合你的方案？">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-169808.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        Clash代理服务费用全解析：从免费到付费，如何精准选择最适合你的方案？                                    </h3>
-                                </a>
-                                <p>在当今数字化时代，网络自由访问已成为许多用户的刚性需求。作为一款功能强大的代理工具，Clash凭借其出色的性能和灵活的配置选项，赢得了全球范围内大量用户的青睐。然而，面对琳琅满目的付费方案，许多新用户</p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-10-20">
-                            <div class="col-md-3">
-                                <a href="/news/article-169420.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240908-3/027917d12c579a5dea9bd86d027f875f.webp" style="width:100%;" alt="突破网络封锁：Telegram与Shadowrocket的完美组合指南">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-169420.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        突破网络封锁：Telegram与Shadowrocket的完美组合指南                                    </h3>
-                                </a>
-                                <p>引言：数字时代的隐私与自由之战  在当今互联网环境中，网络封锁与内容审查已成为许多用户面临的日常挑战。无论是为了获取未经过滤的信息、保护通信隐私，还是简单地访问被屏蔽的国际服务，寻找可靠的翻墙解决方案</p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-10-19">
-                            <div class="col-md-3">
-                                <a href="/news/article-169039.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240908-3/6ee7bb92262f32bc0e17e846b2f17a5d.webp" style="width:100%;" alt="突破网络边界：Firefox科学上网插件的深度指南与实战解析">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-169039.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        突破网络边界：Firefox科学上网插件的深度指南与实战解析                                    </h3>
-                                </a>
-                                <p>引言：数字时代的自由之翼  在信息流动如同生命线的今天，全球仍有超过30%的互联网用户生活在不同程度的网络审查环境中。当常规浏览器窗口变成数字牢笼时，Firefox凭借其开源的基因和丰富的插件生态，成</p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-10-18">
-                            <div class="col-md-3">
-                                <a href="/news/article-168662.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240908-3/6bf05f250f955b5c11937f0020fca2ab.webp" style="width:100%;" alt="守护数字原住民：家长如何为孩子打造安全高效的科学上网指南">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-168662.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        守护数字原住民：家长如何为孩子打造安全高效的科学上网指南                                    </h3>
-                                </a>
-                                <p>引言：当网络成为第二课堂  在深圳某重点中学的家长会上，一位母亲分享了她12岁儿子的经历：通过科学上网工具，孩子不仅完成了国际太空城市设计大赛的资料收集，还参与了MIT的在线编程课程，但同时也遭遇过钓</p>
-                            </div>
-                        </div>
                                             </div>
                 </div>
                 <div class="col-md-3">
@@ -416,16 +416,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-165202.htm" title="轻松掌握：V2Ray剪切板配置导入Mac全攻略">轻松掌握：V2Ray剪切板配置导入Mac全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-163737.htm" title="突破网络藩篱：科学上网APK网盘完全使用手册">突破网络藩篱：科学上网APK网盘完全使用手册</a></li>
-                        <li class="py-2"><a href="/news/article-172513.htm" title="从零到部署：全流程详解V2Ray对接SSPanel一键脚本，让翻墙管理高效又简单">从零到部署：全流程详解V2Ray对接SSPanel一键脚本，让翻墙管理高效又简单</a></li>
-                        <li class="py-2"><a href="/news/article-164810.htm" title="精通Shadowrocket规则配置：从入门到高阶的完整实践手册">精通Shadowrocket规则配置：从入门到高阶的完整实践手册</a></li>
-                        <li class="py-2"><a href="/news/article-170590.htm" title="Shadowrocket账号购买后为何消失？全面解析常见问题与解决方案">Shadowrocket账号购买后为何消失？全面解析常见问题与解决方案</a></li>
-                        <li class="py-2"><a href="/news/article-170977.htm" title="绿色浏览器科学上网：隐私保护与自由访问的完美结合">绿色浏览器科学上网：隐私保护与自由访问的完美结合</a></li>
-                        <li class="py-2"><a href="/news/article-162979.htm" title="免费Clash机场网址全攻略：从获取到配置的完整指南">免费Clash机场网址全攻略：从获取到配置的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-168276.htm" title="古代冲突：文明碰撞与国家博弈的历史回响">古代冲突：文明碰撞与国家博弈的历史回响</a></li>
                         <li class="py-2"><a href="/news/article-173276.htm" title="穿越信息高墙：2018年11月科学上网全攻略深度回顾">穿越信息高墙：2018年11月科学上网全攻略深度回顾</a></li>
-                        <li class="py-2"><a href="/news/article-172904.htm" title="V2Ray与WHMCS的完美融合：打造高效代理服务管理平台">V2Ray与WHMCS的完美融合：打造高效代理服务管理平台</a></li>
+                        <li class="py-2"><a href="/news/article-172131.htm" title="安卓用户必看：彻底解决Clash代理不稳定的终极指南">安卓用户必看：彻底解决Clash代理不稳定的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-171731.htm" title="全面掌握Clash订阅地址转换：从原理到实践的完整指南">全面掌握Clash订阅地址转换：从原理到实践的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-177603.htm" title="iOS 11科学上网全攻略：2018年突破网络限制的终极指南">iOS 11科学上网全攻略：2018年突破网络限制的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-162979.htm" title="免费Clash机场网址全攻略：从获取到配置的完整指南">免费Clash机场网址全攻略：从获取到配置的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-176825.htm" title="突破数字边界：科学上网如何重塑我们的信息世界">突破数字边界：科学上网如何重塑我们的信息世界</a></li>
+                        <li class="py-2"><a href="/news/article-164810.htm" title="精通Shadowrocket规则配置：从入门到高阶的完整实践手册">精通Shadowrocket规则配置：从入门到高阶的完整实践手册</a></li>
+                        <li class="py-2"><a href="/news/article-174847.htm" title="云上穿梭者：深入解析云计算与V2Ray的融合应用">云上穿梭者：深入解析云计算与V2Ray的融合应用</a></li>
+                        <li class="py-2"><a href="/news/article-166704.htm" title="深度解析V2Ray三个月签：从选购到配置的全方位指南">深度解析V2Ray三个月签：从选购到配置的全方位指南</a></li>
+                        <li class="py-2"><a href="/news/article-168276.htm" title="古代冲突：文明碰撞与国家博弈的历史回响">古代冲突：文明碰撞与国家博弈的历史回响</a></li>
                     </ul>
     </div>
 </div>
@@ -437,7 +437,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">9</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+                <h4><span class="badge" style="float: right;">15</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
