--- a/date/2025-10/index.htm
+++ b/date/2025-10/index.htm
@@ -267,16 +267,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-172131.htm" title="安卓用户必看：彻底解决Clash代理不稳定的终极指南">安卓用户必看：彻底解决Clash代理不稳定的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-173663.htm" title="V2RayNG终极指南：从零开始掌握安全科学上网的全流程教程">V2RayNG终极指南：从零开始掌握安全科学上网的全流程教程</a></li>
-                        <li class="py-2"><a href="/news/article-170977.htm" title="绿色浏览器科学上网：隐私保护与自由访问的完美结合">绿色浏览器科学上网：隐私保护与自由访问的完美结合</a></li>
-                        <li class="py-2"><a href="/news/article-165202.htm" title="轻松掌握：V2Ray剪切板配置导入Mac全攻略">轻松掌握：V2Ray剪切板配置导入Mac全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-172513.htm" title="从零到部署：全流程详解V2Ray对接SSPanel一键脚本，让翻墙管理高效又简单">从零到部署：全流程详解V2Ray对接SSPanel一键脚本，让翻墙管理高效又简单</a></li>
-                        <li class="py-2"><a href="/news/article-164070.htm" title="全面掌握Shadowrocket安卓版：从零开始实现安全网络代理">全面掌握Shadowrocket安卓版：从零开始实现安全网络代理</a></li>
+                        <li class="py-2"><a href="/news/article-166704.htm" title="深度解析V2Ray三个月签：从选购到配置的全方位指南">深度解析V2Ray三个月签：从选购到配置的全方位指南</a></li>
+                        <li class="py-2"><a href="/news/article-170590.htm" title="Shadowrocket账号购买后为何消失？全面解析常见问题与解决方案">Shadowrocket账号购买后为何消失？全面解析常见问题与解决方案</a></li>
+                        <li class="py-2"><a href="/news/article-168662.htm" title="守护数字原住民：家长如何为孩子打造安全高效的科学上网指南">守护数字原住民：家长如何为孩子打造安全高效的科学上网指南</a></li>
+                        <li class="py-2"><a href="/news/article-177603.htm" title="iOS 11科学上网全攻略：2018年突破网络限制的终极指南">iOS 11科学上网全攻略：2018年突破网络限制的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-178393.htm" title="懒人福音：用Quantumult实现京东全自动签到的终极指南">懒人福音：用Quantumult实现京东全自动签到的终极指南</a></li>
                         <li class="py-2"><a href="/news/article-172904.htm" title="V2Ray与WHMCS的完美融合：打造高效代理服务管理平台">V2Ray与WHMCS的完美融合：打造高效代理服务管理平台</a></li>
-                        <li class="py-2"><a href="/news/article-162979.htm" title="免费Clash机场网址全攻略：从获取到配置的完整指南">免费Clash机场网址全攻略：从获取到配置的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-174847.htm" title="云上穿梭者：深入解析云计算与V2Ray的融合应用">云上穿梭者：深入解析云计算与V2Ray的融合应用</a></li>
-                        <li class="py-2"><a href="/news/article-167887.htm" title="突破网络壁垒：全方位解决Clash订阅配置失败难题">突破网络壁垒：全方位解决Clash订阅配置失败难题</a></li>
+                        <li class="py-2"><a href="/news/article-164070.htm" title="全面掌握Shadowrocket安卓版：从零开始实现安全网络代理">全面掌握Shadowrocket安卓版：从零开始实现安全网络代理</a></li>
+                        <li class="py-2"><a href="/news/article-175637.htm" title="突破网络边界：三星Gear科学上网完全指南">突破网络边界：三星Gear科学上网完全指南</a></li>
+                        <li class="py-2"><a href="/news/article-176825.htm" title="突破数字边界：科学上网如何重塑我们的信息世界">突破数字边界：科学上网如何重塑我们的信息世界</a></li>
+                        <li class="py-2"><a href="/news/article-175239.htm" title="虚拟私人网络：数字时代的隐私盾牌与自由之门">虚拟私人网络：数字时代的隐私盾牌与自由之门</a></li>
                     </ul>
     </div>
 </div>
@@ -288,7 +288,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">9</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+                <h4><span class="badge" style="float: right;">15</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
