--- a/date/2025-11/index.htm
+++ b/date/2025-11/index.htm
@@ -5,18 +5,18 @@
         <link rel="canonical" href="https://topclashfree.github.io" />
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>2025-11归档 - 免费Top Clash 订阅中文网</title>
+    <title>2025-11归档 - 第2页 - 免费Top Clash 订阅中文网</title>
         <meta name="keywords" content="2025-11归档免费Top Clash 订阅中文网" />
-        <meta name="description" content="2025-11归档，当前是第1页" />
+        <meta name="description" content="2025-11归档，当前是第2页" />
         <link rel="icon" href="/assets/website/img/freenetch/favicon.ico" type="image/x-icon"/>
 
     <meta name="author" content="免费Top Clash 订阅中文网">
     <meta property="og:type" content="webpage" />
     <meta property="og:url" content="https://topclashfree.github.io" />
     <meta property="og:site_name" content="免费Top Clash 订阅中文网" />
-    <meta property="og:title" content="2025-11归档 - 免费Top Clash 订阅中文网" />
+    <meta property="og:title" content="2025-11归档 - 第2页 - 免费Top Clash 订阅中文网" />
     <meta property="og:image" content="/assets/website/img/freenetch/favicon.ico" />
-        <meta property="og:description" content="2025-11归档，当前是第1页" />
+        <meta property="og:description" content="2025-11归档，当前是第2页" />
         
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -27,7 +27,7 @@
     <meta name="robots" content="max-image-preview:large" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="2025-11归档 - 免费Top Clash 订阅中文网">
+    <meta name="apple-mobile-web-app-title" content="2025-11归档 - 第2页 - 免费Top Clash 订阅中文网">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
@@ -117,6 +117,90 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-15">
+                            <div class="col-md-3">
+                                <a href="/news/article-178393.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240908-3/0cdbb171f8d1d7104a29a47c2be5e046.webp" style="width:100%;" alt="懒人福音：用Quantumult实现京东全自动签到的终极指南">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-178393.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        懒人福音：用Quantumult实现京东全自动签到的终极指南                                    </h3>
+                                </a>
+                                <p>一、当科技遇上薅羊毛：自动化签到的时代意义  在数字化生存的今天，每个互联网原住民手机里都躺着十几个需要"每日打卡"的APP。京东作为国内电商巨头，其签到体系堪称福利界的"瑞士军刀"——从京豆、优惠券</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-14">
+                            <div class="col-md-3">
+                                <a href="/news/article-177989.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240908-3/91fe0c32cb57005cfadc0dfb716fb1c5.webp" style="width:100%;" alt="全面指南：电脑科学上网的工具选择与安全策略">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-177989.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        全面指南：电脑科学上网的工具选择与安全策略                                    </h3>
+                                </a>
+                                <p>在数字化程度不断加深的今天，互联网已经从一种辅助工具演变为人们工作、学习、社交甚至是生活中不可或缺的一部分。然而，随着网络技术的迅速发展，我们面对的网络环境也变得更加复杂和多变。尤其是在部分地区网络访</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-13">
+                            <div class="col-md-3">
+                                <a href="/news/article-177603.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240908-3/06b328b6c8a7d0f5ccd6f3235d844978.webp" style="width:100%;" alt="iOS 11科学上网全攻略：2018年突破网络限制的终极指南">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-177603.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        iOS 11科学上网全攻略：2018年突破网络限制的终极指南                                    </h3>
+                                </a>
+                                <p>引言：数字时代的自由之翼  在2018年的数字版图中，互联网已成为现代人获取知识、交流思想的重要渠道。然而，不同地区的网络政策差异造就了无形的"数字鸿沟"，科学上网技术便成为跨越这道鸿沟的关键桥梁。对</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-12">
+                            <div class="col-md-3">
+                                <a href="/news/article-177221.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240908-3/409889d86ff78f44fa13a03963ed57cd.webp" style="width:100%;" alt="iOS端科学上网王牌：Shadowrocket与泥鳅哥的实战全指南">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-177221.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        iOS端科学上网王牌：Shadowrocket与泥鳅哥的实战全指南                                    </h3>
+                                </a>
+                                <p>在日渐严峻的网络环境下，寻找一款既安全又高效的代理工具成为不少用户的“刚需”。尤其对于iPhone用户而言，一款功能强大、界面简洁、支持多协议的科学上网工具，堪称“翻墙神器”。而Shadowrocke</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-11">
+                            <div class="col-md-3">
+                                <a href="/news/article-176825.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240908-3/409889d86ff78f44fa13a03963ed57cd.webp" style="width:100%;" alt="突破数字边界：科学上网如何重塑我们的信息世界">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-176825.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        突破数字边界：科学上网如何重塑我们的信息世界                                    </h3>
+                                </a>
+                                <p>在当今这个信息爆炸的时代，互联网本应成为连接全球的无障碍桥梁。然而，现实中的网络环境却常常被各种无形的墙所阻隔，使得信息的自由流动受到限制。科学上网，作为一种突破网络限制的技术手段，不仅为我们打开了通</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-10">
+                            <div class="col-md-3">
+                                <a href="/news/article-176433.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240908-3/027917d12c579a5dea9bd86d027f875f.webp" style="width:100%;" alt="突破网络边界：利用Hosts文件实现科学上网的完整指南">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-176433.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        突破网络边界：利用Hosts文件实现科学上网的完整指南                                    </h3>
+                                </a>
+                                <p>在当今全球化的数字时代，互联网本应是无国界的知识海洋，然而现实中的网络限制却时常为我们的探索之旅设下重重关卡。面对某些地区对特定网站和服务的封锁，许多用户开始寻找更为便捷高效的访问解决方案。在众多科学</p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-11-09">
                             <div class="col-md-3">
                                 <a href="/news/article-176042.htm" class="xcblog-blog-url">
@@ -173,78 +257,8 @@
                                 <p>在数字时代的浪潮中，“数据”和“连接”成为现代生活的核心动力。云计算以其强大的计算能力和弹性扩展性，已然是企业与个人数字化转型的首选平台；而V2Ray，作为一款强大的网络代理工具，则为网络自由和隐私保</p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-11-05">
-                            <div class="col-md-3">
-                                <a href="/news/article-174452.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240908-3/49bd97f8e50a136f5abee650a6b745bd.webp" style="width:100%;" alt="突破地域限制：全面解析B站科学上网的实用技巧与深度指南">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-174452.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        突破地域限制：全面解析B站科学上网的实用技巧与深度指南                                    </h3>
-                                </a>
-                                <p>引言：数字时代的跨区域内容获取需求  在当今全球化数字时代，视频平台已成为人们获取娱乐、知识和社交的重要渠道。作为中国领先的ACG文化社区，哔哩哔哩（Bilibili，简称B站）凭借其独特的弹幕文化和</p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-11-04">
-                            <div class="col-md-3">
-                                <a href="/news/article-174058.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240908-3/49bd97f8e50a136f5abee650a6b745bd.webp" style="width:100%;" alt="突破网络边界：Chrom浏览器科学上网插件完全指南与深度实践">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-174058.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        突破网络边界：Chrom浏览器科学上网插件完全指南与深度实践                                    </h3>
-                                </a>
-                                <p>引言：数字时代的"网络通行证"  当全球95%的互联网内容被无形的数字长城所阻隔，科学上网技术已成为当代网民必备的生存技能。Chrom浏览器凭借其卓越的性能和丰富的扩展生态，成为科学上网的理想载体。本</p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-11-03">
-                            <div class="col-md-3">
-                                <a href="/news/article-173663.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240908-3/38a2b805d092ccfce4ea66fd732ce397.webp" style="width:100%;" alt="V2RayNG终极指南：从零开始掌握安全科学上网的全流程教程">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-173663.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        V2RayNG终极指南：从零开始掌握安全科学上网的全流程教程                                    </h3>
-                                </a>
-                                <p>引言：为什么选择V2RayNG？  在数字时代，网络自由与隐私保护已成为刚需。V2RayNG作为V2Ray协议的安卓/Windows客户端代表，凭借其模块化设计、多协议支持和动态路由能力，正在取代传统</p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-11-02">
-                            <div class="col-md-3">
-                                <a href="/news/article-173276.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240908-3/91fe0c32cb57005cfadc0dfb716fb1c5.webp" style="width:100%;" alt="穿越信息高墙：2018年11月科学上网全攻略深度回顾">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-173276.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        穿越信息高墙：2018年11月科学上网全攻略深度回顾                                    </h3>
-                                </a>
-                                <p>在数字信息横飞的时代，网络自由成了越来越多用户所追求的一种数字“人权”。但在现实中，全球仍有部分地区对互联网进行内容屏蔽、访问限制，甚至进行深度数据包检测（DPI），使得普通用户在访问如 Google</p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-11-01">
-                            <div class="col-md-3">
-                                <a href="/news/article-172904.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240908-3/09d18c7c66bcd5cdb6be185eb4661962.webp" style="width:100%;" alt="V2Ray与WHMCS的完美融合：打造高效代理服务管理平台">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-172904.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        V2Ray与WHMCS的完美融合：打造高效代理服务管理平台                                    </h3>
-                                </a>
-                                <p>在当今互联网环境中，隐私保护和网络自由访问的需求日益增长，而V2Ray作为一款强大的代理工具，配合WHMCS这一专业的自动化管理系统，能够为用户提供既安全又便捷的网络服务体验。本文将深入探讨如何将这两</p>
-                            </div>
-                        </div>
                         
-                                            </div>
+                        <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/date/2025-11/page-2.htm">2</a></li> <li><a href="/date/2025-11/page-2.htm">&raquo;</a></li></ul>                    </div>
                 </div>
                 <div class="col-md-3">
                     <div class="panel panel-default">
@@ -253,16 +267,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-165946.htm" title="v2rayNG停止运行的原因及全面解决方案">v2rayNG停止运行的原因及全面解决方案</a></li>
-                        <li class="py-2"><a href="/news/article-171731.htm" title="全面掌握Clash订阅地址转换：从原理到实践的完整指南">全面掌握Clash订阅地址转换：从原理到实践的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-167887.htm" title="突破网络壁垒：全方位解决Clash订阅配置失败难题">突破网络壁垒：全方位解决Clash订阅配置失败难题</a></li>
+                        <li class="py-2"><a href="/news/article-176825.htm" title="突破数字边界：科学上网如何重塑我们的信息世界">突破数字边界：科学上网如何重塑我们的信息世界</a></li>
+                        <li class="py-2"><a href="/news/article-169420.htm" title="突破网络封锁：Telegram与Shadowrocket的完美组合指南">突破网络封锁：Telegram与Shadowrocket的完美组合指南</a></li>
                         <li class="py-2"><a href="/news/article-169039.htm" title="突破网络边界：Firefox科学上网插件的深度指南与实战解析">突破网络边界：Firefox科学上网插件的深度指南与实战解析</a></li>
                         <li class="py-2"><a href="/news/article-162979.htm" title="免费Clash机场网址全攻略：从获取到配置的完整指南">免费Clash机场网址全攻略：从获取到配置的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-170590.htm" title="Shadowrocket账号购买后为何消失？全面解析常见问题与解决方案">Shadowrocket账号购买后为何消失？全面解析常见问题与解决方案</a></li>
-                        <li class="py-2"><a href="/news/article-170977.htm" title="绿色浏览器科学上网：隐私保护与自由访问的完美结合">绿色浏览器科学上网：隐私保护与自由访问的完美结合</a></li>
-                        <li class="py-2"><a href="/news/article-164810.htm" title="精通Shadowrocket规则配置：从入门到高阶的完整实践手册">精通Shadowrocket规则配置：从入门到高阶的完整实践手册</a></li>
-                        <li class="py-2"><a href="/news/article-163358.htm" title="突破边界：小米路由器2的科学上网全攻略与深度体验">突破边界：小米路由器2的科学上网全攻略与深度体验</a></li>
+                        <li class="py-2"><a href="/news/article-168662.htm" title="守护数字原住民：家长如何为孩子打造安全高效的科学上网指南">守护数字原住民：家长如何为孩子打造安全高效的科学上网指南</a></li>
+                        <li class="py-2"><a href="/news/article-175239.htm" title="虚拟私人网络：数字时代的隐私盾牌与自由之门">虚拟私人网络：数字时代的隐私盾牌与自由之门</a></li>
+                        <li class="py-2"><a href="/news/article-164439.htm" title="精通Clash端口设置：从入门到实战的完整指南">精通Clash端口设置：从入门到实战的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-168276.htm" title="古代冲突：文明碰撞与国家博弈的历史回响">古代冲突：文明碰撞与国家博弈的历史回响</a></li>
                         <li class="py-2"><a href="/news/article-176042.htm" title="解锁TikTok流畅体验：Quantumult终极配置指南">解锁TikTok流畅体验：Quantumult终极配置指南</a></li>
+                        <li class="py-2"><a href="/news/article-163358.htm" title="突破边界：小米路由器2的科学上网全攻略与深度体验">突破边界：小米路由器2的科学上网全攻略与深度体验</a></li>
                     </ul>
     </div>
 </div>
@@ -274,7 +288,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">9</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+                <h4><span class="badge" style="float: right;">15</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
