--- a/disclaimer.htm
+++ b/disclaimer.htm
@@ -145,16 +145,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/news/article-175239.htm" title="虚拟私人网络：数字时代的隐私盾牌与自由之门">虚拟私人网络：数字时代的隐私盾牌与自由之门</a></li>
                         <li class="py-2"><a href="/news/article-169039.htm" title="突破网络边界：Firefox科学上网插件的深度指南与实战解析">突破网络边界：Firefox科学上网插件的深度指南与实战解析</a></li>
-                        <li class="py-2"><a href="/news/article-166327.htm" title="科学上网协议全解析：从原理到实践的完整指南">科学上网协议全解析：从原理到实践的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-168662.htm" title="守护数字原住民：家长如何为孩子打造安全高效的科学上网指南">守护数字原住民：家长如何为孩子打造安全高效的科学上网指南</a></li>
-                        <li class="py-2"><a href="/news/article-164810.htm" title="精通Shadowrocket规则配置：从入门到高阶的完整实践手册">精通Shadowrocket规则配置：从入门到高阶的完整实践手册</a></li>
-                        <li class="py-2"><a href="/news/article-175637.htm" title="突破网络边界：三星Gear科学上网完全指南">突破网络边界：三星Gear科学上网完全指南</a></li>
+                        <li class="py-2"><a href="/news/article-173276.htm" title="穿越信息高墙：2018年11月科学上网全攻略深度回顾">穿越信息高墙：2018年11月科学上网全攻略深度回顾</a></li>
+                        <li class="py-2"><a href="/news/article-169808.htm" title="Clash代理服务费用全解析：从免费到付费，如何精准选择最适合你的方案？">Clash代理服务费用全解析：从免费到付费，如何精准选择最适合你的方案？</a></li>
+                        <li class="py-2"><a href="/news/article-171731.htm" title="全面掌握Clash订阅地址转换：从原理到实践的完整指南">全面掌握Clash订阅地址转换：从原理到实践的完整指南</a></li>
                         <li class="py-2"><a href="/news/article-174058.htm" title="突破网络边界：Chrom浏览器科学上网插件完全指南与深度实践">突破网络边界：Chrom浏览器科学上网插件完全指南与深度实践</a></li>
-                        <li class="py-2"><a href="/news/article-165946.htm" title="v2rayNG停止运行的原因及全面解决方案">v2rayNG停止运行的原因及全面解决方案</a></li>
-                        <li class="py-2"><a href="/news/article-168276.htm" title="古代冲突：文明碰撞与国家博弈的历史回响">古代冲突：文明碰撞与国家博弈的历史回响</a></li>
-                        <li class="py-2"><a href="/news/article-172131.htm" title="安卓用户必看：彻底解决Clash代理不稳定的终极指南">安卓用户必看：彻底解决Clash代理不稳定的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-173663.htm" title="V2RayNG终极指南：从零开始掌握安全科学上网的全流程教程">V2RayNG终极指南：从零开始掌握安全科学上网的全流程教程</a></li>
+                        <li class="py-2"><a href="/news/article-174452.htm" title="突破地域限制：全面解析B站科学上网的实用技巧与深度指南">突破地域限制：全面解析B站科学上网的实用技巧与深度指南</a></li>
+                        <li class="py-2"><a href="/news/article-170590.htm" title="Shadowrocket账号购买后为何消失？全面解析常见问题与解决方案">Shadowrocket账号购买后为何消失？全面解析常见问题与解决方案</a></li>
+                        <li class="py-2"><a href="/news/article-167466.htm" title="Windows平台vmess协议客户端全指南：安全代理的终极解决方案">Windows平台vmess协议客户端全指南：安全代理的终极解决方案</a></li>
+                        <li class="py-2"><a href="/news/article-164810.htm" title="精通Shadowrocket规则配置：从入门到高阶的完整实践手册">精通Shadowrocket规则配置：从入门到高阶的完整实践手册</a></li>
                     </ul>
     </div>
 </div>
@@ -166,7 +166,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">9</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+                <h4><span class="badge" style="float: right;">15</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
