--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -530,16 +530,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-167887.htm" title="突破网络壁垒：全方位解决Clash订阅配置失败难题">突破网络壁垒：全方位解决Clash订阅配置失败难题</a></li>
-                        <li class="py-2"><a href="/news/article-166327.htm" title="科学上网协议全解析：从原理到实践的完整指南">科学上网协议全解析：从原理到实践的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-174058.htm" title="突破网络边界：Chrom浏览器科学上网插件完全指南与深度实践">突破网络边界：Chrom浏览器科学上网插件完全指南与深度实践</a></li>
-                        <li class="py-2"><a href="/news/article-165946.htm" title="v2rayNG停止运行的原因及全面解决方案">v2rayNG停止运行的原因及全面解决方案</a></li>
-                        <li class="py-2"><a href="/news/article-166704.htm" title="深度解析V2Ray三个月签：从选购到配置的全方位指南">深度解析V2Ray三个月签：从选购到配置的全方位指南</a></li>
-                        <li class="py-2"><a href="/news/article-175637.htm" title="突破网络边界：三星Gear科学上网完全指南">突破网络边界：三星Gear科学上网完全指南</a></li>
-                        <li class="py-2"><a href="/news/article-174452.htm" title="突破地域限制：全面解析B站科学上网的实用技巧与深度指南">突破地域限制：全面解析B站科学上网的实用技巧与深度指南</a></li>
-                        <li class="py-2"><a href="/news/article-172131.htm" title="安卓用户必看：彻底解决Clash代理不稳定的终极指南">安卓用户必看：彻底解决Clash代理不稳定的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-169420.htm" title="突破网络封锁：Telegram与Shadowrocket的完美组合指南">突破网络封锁：Telegram与Shadowrocket的完美组合指南</a></li>
+                        <li class="py-2"><a href="/news/article-167466.htm" title="Windows平台vmess协议客户端全指南：安全代理的终极解决方案">Windows平台vmess协议客户端全指南：安全代理的终极解决方案</a></li>
+                        <li class="py-2"><a href="/news/article-171731.htm" title="全面掌握Clash订阅地址转换：从原理到实践的完整指南">全面掌握Clash订阅地址转换：从原理到实践的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-173663.htm" title="V2RayNG终极指南：从零开始掌握安全科学上网的全流程教程">V2RayNG终极指南：从零开始掌握安全科学上网的全流程教程</a></li>
+                        <li class="py-2"><a href="/news/article-172513.htm" title="从零到部署：全流程详解V2Ray对接SSPanel一键脚本，让翻墙管理高效又简单">从零到部署：全流程详解V2Ray对接SSPanel一键脚本，让翻墙管理高效又简单</a></li>
+                        <li class="py-2"><a href="/news/article-169808.htm" title="Clash代理服务费用全解析：从免费到付费，如何精准选择最适合你的方案？">Clash代理服务费用全解析：从免费到付费，如何精准选择最适合你的方案？</a></li>
                         <li class="py-2"><a href="/news/article-167092.htm" title="突破网络边界：科学上网工具全解析与实用指南">突破网络边界：科学上网工具全解析与实用指南</a></li>
+                        <li class="py-2"><a href="/news/article-162979.htm" title="免费Clash机场网址全攻略：从获取到配置的完整指南">免费Clash机场网址全攻略：从获取到配置的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-176433.htm" title="突破网络边界：利用Hosts文件实现科学上网的完整指南">突破网络边界：利用Hosts文件实现科学上网的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-165569.htm" title="掌握Surfboard配置艺术：从入门到精通的完全指南">掌握Surfboard配置艺术：从入门到精通的完全指南</a></li>
+                        <li class="py-2"><a href="/news/article-170977.htm" title="绿色浏览器科学上网：隐私保护与自由访问的完美结合">绿色浏览器科学上网：隐私保护与自由访问的完美结合</a></li>
                     </ul>
     </div>
 </div>
@@ -551,7 +551,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">9</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+                <h4><span class="badge" style="float: right;">15</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
